Fri May 14 2004  Joe Allen <jhallen@world.std.com>

	Many jpicorc.in improvements.

Thu May 13 2004  Joe Allen <jhallen@world.std.com>

	Improve exit messages.

	Improve 'lose' which is for jmacs.

	Improve ^X for jpico.

	Got rid of "end of processs" message in shell windows.

	Shell windows can now be orphaned and duplicated (process
	is associated with B instead of BW).

	Shell window input taken from cmd.c instead of in
	actual edit functions.

	Improved 'lose' again- now it fill in windows with any
	orphaned buffers it can find.

Thu May 13 2004  Joe Allen <jhallen@world.std.com>

	Small compile fix.

Wed May 12 2004  Joe Allen <jhallen@world.std.com>

	Compile now uses shell window (so you can hit ^C during the
	compile.

	Shell window termination code fix: now all of the output always
	makes it to the window.

	Added query save loop to save all modified files before build.

	Added scratch buffers: they are ignored during ^K X, ^C and
	querysave.

	^X ^C is now much more like emacs.

	Fixed annoying occasional screen update glitch: it was caused
	by SIGALRM causing dropped output in Linux (doesn't happen on
	SUN).  So now we arm SIGALRM only when waiting for input.  (SIGALRM
	is used to keep the clock updated).

Wed May 12 2004  Joe Allen <jhallen@world.std.com>

	Applied Olexiy Avramchenko's <olexiy@irtech.cn.ua> patch
	on configure.ac.  Also added mail.jsf.in to Makefile.am

	Applied Yura Kalinichenko's <yuk@iceb.vinnitsa.com> "openpty"
	patch.

Tue May 11 2004  Joe Allen <jhallen@world.std.com>

	Added "upper" and "lower" functions (no longer
	depend on "tr" command).

	Fix jmacs transpose word command.

Tue May 11 2004  Joe Allen <jhallen@world.std.com>

	Fix marking mode so only window with cursor is
	effected.

	Ctrl-space clears selection when cursor is in
	selection, otherwise it starts a new one.

	^K E prompts to load original file from disk.

Tue May 11 2004  Joe Allen <jhallen@world.std.com>
	* b.c ufile.c :

	Update file date on save.