@@ -1,5 +1,9 @@
 Fri May 14 2004  Joe Allen <jhallen@world.std.com>
 
+	Mason highlighter
+
+Fri May 14 2004  Joe Allen <jhallen@world.std.com>
+
 	Many jpicorc.in improvements.
 
 Thu May 13 2004  Joe Allen <jhallen@world.std.com>
